Implemented endpoints for adding and removing a card from the playing cards in the resources service and implemented 2 TODO in the control service
